# darwinloop

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _commit_msg.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/football/: README.md  benchmarks.py  football_router.py
examples/news/: README.md  benchmarks.py  news_router.py  news_router_evolved.py
examples/quickstart/: my_router.py  run.py
src/darwinloop/: __init__.py  _api.py  _models.py  cli.py  report.py  scaffold.py
src/darwinloop/core/: __init__.py  archive.py  benchmark.py  improver.py  selector.py
src/darwinloop/llm/: __init__.py  client.py
src/darwinloop/packs/: __init__.py  base.py  commerce.py  routing.py  support.py
src/darwinloop/sandbox/: __init__.py  executor.py  validator.py
src/darwinloop/tools/: __init__.py  bash_tool.py  edit_tool.py
tests/: conftest.py  test_archive.py  test_benchmark.py  test_cli.py  test_sandbox.py  test_selector.py
