[project]
name = "darwinloop"
version = "0.1.0"
description = "Self-improvement engine for AI agents — evolve any agent autonomously using the Darwin Gödel Machine algorithm."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Fetch.ai Innovation Lab", email = "innovation@fetch.ai" },
]
maintainers = [
    { name = "Fetch.ai Innovation Lab", email = "innovation@fetch.ai" },
]
keywords = [
    "ai",
    "agents",
    "self-improvement",
    "darwin-godel-machine",
    "dgm",
    "fetch.ai",
    "llm",
    "uagents",
    "darwinloop",
    "evolutionary-algorithms",
    "code-generation",
    "langchain",
    "langgraph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
darwinloop = "darwinloop.cli:app"

[project.optional-dependencies]
uagents = ["uagents>=0.24.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/fetchai/darwinloop"
Documentation = "https://github.com/fetchai/darwinloop#readme"
Repository = "https://github.com/fetchai/darwinloop"
Issues = "https://github.com/fetchai/darwinloop/issues"
Changelog = "https://github.com/fetchai/darwinloop/releases"

# ── Build system ──────────────────────────────────────────────────────────────

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Include everything needed for source distribution
include = [
    "src/",
    "tests/",
    "examples/",
    "README.md",
    "SECURITY.md",
    "CONTRIBUTING.md",
    "LICENSE",
    ".env.example",
]
# Exclude dev/runtime artifacts from the wheel
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "darwinloop_output/",
    "*.egg-info/",
    ".env",
    ".ruff_cache/",
    ".mypy_cache/",
    ".pytest_cache/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/darwinloop"]

[tool.hatch.build.targets.sdist]
# Source dist includes tests and examples so users can run them offline
include = [
    "src/",
    "tests/",
    "examples/",
    "README.md",
    "SECURITY.md",
    "CONTRIBUTING.md",
    "LICENSE",
    ".env.example",
    "pyproject.toml",
]

# ── Versioning ────────────────────────────────────────────────────────────────
# To bump version: edit [project] version above, then rebuild.
# For automated versioning with git tags, uncomment the lines below and
# remove the static version = "0.1.0" above.
#
# [tool.hatch.version]
# source = "vcs"
# [tool.hatch.build.hooks.vcs]
# version-file = "src/darwinloop/_version.py"

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments (typer uses this)
    "SIM117", # combine with statements (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["darwinloop"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy (type checker) ───────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
# Allow gradual typing in non-public internals
[[tool.mypy.overrides]]
module = ["darwinloop.cli", "darwinloop.scaffold"]
disallow_untyped_defs = false

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (run with -m slow)",
    "integration: marks tests requiring a live LLM API key",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/darwinloop"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
